# ml-course-homeworks

./: README.md  pyproject.toml
hw01_setup_tools/: hw01_setup_tools.ipynb
hw02_eda/: hw02_eda.ipynb
